<resources>
    <string name="app_name">LLtracker</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="interval">Interval Minutes</string>
    <string name="minutes">minutes</string>
    <string name="about_text">LLtracker is a location sharing app.\n\nStart a session and share your
        location at an interval you select.\n\nFollow online with just a username at "https://"n\n
    </string>
    <string name="logged_in">Logged in as:</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="title">LLtracker</string>
    <string name="new_user">new user</string>
    <string name="start_session">start session</string>
    <string name="end_session">end session</string>
    <string name="recent_data">Recent data\n</string>
    <string name="sign_out">sign out</string>
    <string name="next">Next</string>
    <string name="begin_session">Start a new session</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_new_user">new user</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string-array name="time_interval_array">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>

</resources>